Fixed bug where Å was cut off at the top in inputs and selects.

--- a/src/stylesheets/elements/_dataTables.scss
+++ b/src/stylesheets/elements/_dataTables.scss
@@ -252,6 +252,5 @@ table.dataTable {
         font-size: $input-font-size;
         line-height: $input-line-height;
         padding: $input-top-bottom-padding $input-left-right-padding;
-        height: $input-standard-height;
     }
 }
