--- a/src/stylesheets/elements/_inputs.scss
+++ b/src/stylesheets/elements/_inputs.scss
@@ -24,7 +24,6 @@
   width: 100%;
   margin-top: map-get($spacers, 3);
   text-align: left;
-  height: $input-standard-height;
 }
 
 table {
@@ -42,18 +41,24 @@ textarea.form-input{
 
 //Note for select. Uses browser-specific styling for arrow. No custom.
 .form-select {
-  background-color: $color-white;
   border: $outer-border;
   border-radius: $input-border-radius;
   color: $color-black; // standardize on firefox
   display: block;
   font-size: $input-font-size;
   line-height: $input-line-height;
-  height: $input-standard-height; //fixes bug in chrome where line-height is not respected.
   width: 100%;
   margin-top: $input-top-margin;
   text-align: left;
   padding: $input-top-bottom-padding $input-left-right-padding;
+  padding-right: 32px;
+  //custom arrrow:
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z' /%3E%3C/svg%3E"); //angle-arrow-down
+  background-repeat: no-repeat;
+  background-position: calc(100% - 10px);
 
   // Remove dotted outline from select element on focus in Firefox
   &:-moz-focusring {
